<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--General Strings-->
    <string name="app_name">Log It</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Name:</string>
    <string name="get_log">Submit Logcat</string>
    <string name="log_url">Log URL</string>
    <string name="tbr" translatable="no">Team BlueRidge</string>
    <string name="created_by">Created by: Team BlueRidge</string>
    <string name="stikked">Stikked</string>

    <!--Preference Strings-->
    <string name="stikked_pref">Stikked Doman</string>
    <string name="stikked_pref_summary">Domain where Stikked is installed</string>
    <string name="about">About</string>
    <string name="version">Version</string>
</resources>
